Add policy run changes into search to update flow.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 #server.port=8092
 server.port=${SERVER_PORT}
 
+# Configure json mapper for rest apis
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
 #spring.data.elasticsearch.cluster-nodes=localhost:9300
 spring.data.elasticsearch.cluster-nodes=${ELASTIC_HOST}:${ELASTIC_PORT}
 
