--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,13 @@
 		<dependency>
 			<groupId>com.synectiks</groupId>
 			<artifactId>common-libraries</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>${project.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.data</groupId>
+					<artifactId>spring-data-elasticsearch</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
