--- a/package.json
+++ b/package.json
@@ -34,33 +34,25 @@
     "redux-devtools-log-monitor": "1.4.0",
     "redux-promise-middleware": "6.1.0",
     "redux-thunk": "2.3.0",
-    "rxjs": "6.4.0",
-    "sockjs-client": "1.3.0",
     "tslib": "1.9.3",
-    "uuid": "3.3.2",
-    "webstomp-client": "1.2.6"
+    "uuid": "3.3.2"
   },
   "devDependencies": {
-    "@types/chai": "4.1.7",
     "@types/enzyme": "3.9.1",
     "@types/jest": "24.0.11",
     "@types/lodash": "4.14.123",
-    "@types/mocha": "5.2.7",
     "@types/node": "10.14.3",
     "@types/react": "16.8.10",
     "@types/react-dom": "16.8.3",
     "@types/react-redux": "6.0.6",
     "@types/react-router-dom": "4.3.1",
     "@types/redux": "3.6.31",
-    "@types/selenium-webdriver": "4.0.0",
     "@types/webpack-env": "1.13.9",
     "autoprefixer": "9.5.0",
     "base-href-webpack-plugin": "2.0.0",
-    "browser-sync": "2.26.5",
+    "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "2.2.2",
     "cache-loader": "2.0.1",
-    "chai": "4.2.0",
-    "chai-as-promised": "7.1.1",
     "copy-webpack-plugin": "5.0.2",
     "core-js": "3.0.0",
     "cross-env": "5.2.0",
@@ -81,16 +73,13 @@
     "json-loader": "0.5.7",
     "lint-staged": "8.1.5",
     "mini-css-extract-plugin": "0.5.0",
-    "mocha": "6.1.4",
     "moment-locales-webpack-plugin": "1.0.7",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-loader": "3.0.0",
     "prettier": "1.16.4",
-    "protractor": "5.4.2",
     "react-infinite-scroller": "1.2.4",
     "redux-mock-store": "1.5.3",
     "rimraf": "2.6.3",
-    "rxjs-tslint": "0.1.7",
     "sass": "1.17.3",
     "sass-loader": "7.1.0",
     "simple-progress-webpack-plugin": "1.1.2",
@@ -105,14 +94,12 @@
     "to-string-loader": "1.1.5",
     "ts-jest": "24.0.0",
     "ts-loader": "5.3.3",
-    "ts-node": "8.0.3",
     "tslint": "5.14.0",
     "tslint-config-prettier": "1.18.0",
     "tslint-eslint-rules": "5.4.0",
     "tslint-loader": "3.6.0",
     "tslint-react": "3.6.0",
     "typescript": "3.3.4000",
-    "webdriver-manager": "12.1.5",
     "webpack": "4.28.4",
     "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.2.1",
@@ -135,8 +122,6 @@
     "lint": "tslint --project tsconfig.json -e 'node_modules/**'",
     "lint:fix": "npm run lint -- --fix",
     "cleanup": "rimraf target/classes/static/",
-    "e2e": "protractor src/test/javascript/protractor.conf.js",
-    "postinstall": "node node_modules/protractor/bin/webdriver-manager update --gecko false",
     "start": "npm run webpack:dev",
     "start-tls": "npm run webpack:dev -- --env.tls",
     "jest": "jest --coverage --logHeapUsage --maxWorkers=2 --config src/test/javascript/jest.conf.js",
