Update search query result processing.

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -18,6 +18,7 @@ logging:
     ROOT: DEBUG
     io.github.jhipster: DEBUG
     com.synectiks.search: DEBUG
+    org.elasticsearch.index.search.slowlog.query: INFO
 
 spring:
   profiles:
