--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "redux-promise-middleware": "6.1.0",
     "redux-thunk": "2.3.0",
     "tslib": "1.9.3",
-    "uuid": "3.3.2"
+    "uuid": "3.3.2",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@types/enzyme": "3.9.1",
@@ -63,7 +64,7 @@
     "file-loader": "3.0.1",
     "fork-ts-checker-webpack-plugin": "1.0.0",
     "friendly-errors-webpack-plugin": "1.7.0",
-    "generator-jhipster": "6.2.0",
+    "generator-jhipster": "^6.5.1",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
     "identity-obj-proxy": "3.0.0",
