Fix LocalDate conversion issues, and also translation issue of string to json.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=${SERVER_PORT}
 
 # Configure json mapper for rest apis
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.jackson.serialization.write-dates-as-timestamps=false
 
 #spring.data.elasticsearch.cluster-nodes=localhost:9300
 spring.data.elasticsearch.cluster-nodes=${ELASTIC_HOST}:${ELASTIC_PORT}
