--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -71,6 +71,7 @@ spring:
   jackson:
     serialization:
       FAIL_ON_EMPTY_BEANS: false
+      write-dates-as-timestamps: false
   messages:
     basename: i18n/messages
   main:
