Add a new object mapper for elasticsearch

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -70,7 +70,7 @@ spring:
       cluster-nodes: localhost:9300
   jackson:
     serialization:
-      FAIL_ON_EMPTY_BEANS: false
+      fail-on-empty-beans: false
       write-dates-as-timestamps: false
   messages:
     basename: i18n/messages
