Update comments and java docs

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -15,8 +15,8 @@
 
 logging:
   level:
-    ROOT: DEBUG
-    io.github.jhipster: DEBUG
+    ROOT: INFO
+    io.github.jhipster: INFO
     com.synectiks.search: DEBUG
     org.elasticsearch.index.search.slowlog.query: INFO
 
