--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -122,13 +122,13 @@ jhipster:
   clientApp:
     name: 'searchApp'
   # By default CORS is disabled. Uncomment to enable.
-  # cors:
-  #     allowed-origins: "*"
-  #     allowed-methods: "*"
-  #     allowed-headers: "*"
-  #     exposed-headers: "Authorization,Link,X-Total-Count"
-  #     allow-credentials: true
-  #     max-age: 1800
+    cors:
+       allowed-origins: "*"
+       allowed-methods: "*"
+       allowed-headers: "*"
+       exposed-headers: "Authorization,Link,X-Total-Count"
+       allow-credentials: true
+       max-age: 1800
   mail:
     from: search@localhost
   swagger:
